--- a/frontend/index.html
+++ b/frontend/index.html
@@ -171,6 +171,7 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="scripts/auth.js"></script>
     <!-- Link to the new script for falling code effect -->
     <script src="scripts/falling-code.js"></script>
